--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Sign up</title>
+	<link rel="stylesheet" href="signup.css">
+	
 </head>
 <body>
+	<nav id="sgnUp">
+		<p>SIGN UP</p>
+	</nav>
+	<form id='sgnUpFrm' action="">
+		<p><span>First Name</span><input type="text"/>
+		</p>
+		<p><span>Last Name</span><input type="text"/>
+		</p>
+		<p><span>Password</span><input type="password"/>
+		</p>
+		<p> <span>Confirm Password</span><input type="password"/>
+		</p>
+		<button>Submit</button>
+		<p id="lgin">ALREADY HAVE AN ACCOUNT? <a href='#'>LOGIN</a></p>
+	</form>
 	
 </body>
 </html>
