sign up page modified

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		</p>
 		<button>Submit</button>
 		<p id="lgin">ALREADY HAVE AN ACCOUNT? <a href='#'>LOGIN</a></p>
+		<p id="cpyrt"> copy right &copy;HNG Intership sign up Form . All rights reserved | Design by Team Horme</p>
 	</form>
 	
 </body>
